이미지에 하이퍼링크 설정, DB에 link 추가

--- a/pbook/templates/index.html
+++ b/pbook/templates/index.html
@@ -48,7 +48,7 @@
         <tbody>
             {% for i in pockets %}
             <tr>
-                <td class="center"><a href="{{i.img_url}}"><img src="{{i.img_url}}"></a></td><!-- style="width:40px; heigh:40px"></td> -->
+                <td class="center"><a href="{{i.link}}"><img src="{{i.img_url}}"></a></td><!-- style="width:40px; heigh:40px"></td> -->
                 <td>{{i.name}}</td>
                 <td>{{ i.character }}</td>
                 <td>{{ i.classify }}</td>
