--- a/pbook/templates/index.html
+++ b/pbook/templates/index.html
@@ -1,68 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>포켓몬도감</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-        img {
-            width: 45px;
-        }
-        th {
-            text-align: center;
-            white-space: nowrap;
-        }
-        td.center {
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
+{% extends 'home.html' %}
+{% block list %}
+<style>
+    body {
+        background-color: #D9E5FF;
+    }
+</style>
+
+
+
     <div style="text-align: center;">
-        <h1>PocketGo</h1>
+
+        <h1>포켓몬 리스트</h1>
     </div>
 
-    <div class="container mt-5">
-    <table class="table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">이름</th>
-            <th scope="col">특징</th>
-            <th scope="col">분류</th>
-            <th scope="col">무게</th>
-            <th scope="col">키</th>
-            <!-- <th scope="col">속성</th> -->
-          </tr>
-        </thead>
-        <tbody>
-            {% for i in pockets %}
-            <tr>
-                <td class="center"><a href="{{i.link}}"><img src="{{i.img_url}}"></a></td><!-- style="width:40px; heigh:40px"></td> -->
-                <td>{{i.name}}</td>
-                <td>{{ i.character }}</td>
-                <td>{{ i.classify }}</td>
-                <td>{{ i.weight }}</td>
-                <td>{{ i.height }}</td>
-                <!-- <td>{{ i.type1 }}</td>
-                <td>{{ i.type2 }}</td> -->
-            </tr>
-            {% endfor %}
-        </tbody>
-      </table>
+    <!-- <div class="container mt-5">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">이름</th>
+                    <th scope="col">특징</th>
+                    <th scope="col">분류</th>
+                    <th scope="col">무게</th>
+                    <th scope="col">키</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in pockets %}
+                <tr>
+                    <td class="center"><a href="{{i.link}}"><img src="{{i.img_url}}"></a></td>
+
+                    <td>{{i.name}}</td>
+                    <td>{{ i.character }}</td>
+                    <td>{{ i.classify }}</td>
+                    <td>{{ i.weight }}</td>
+                    <td>{{ i.height }}</td>
+
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     
+    </div> -->
+
+
+ <!-- Section-->
+ <section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            {% for i in pockets %}
+            <div class="col mb-5">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img class="card-img-top" src="{{i.img_url}}"  />
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">{{i.name}}</h5>
+                            <!-- Product price-->
+                            {{ i.character }}
+                        </div>
+                    </div>
+                    <!-- Product actions-->
+                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{i.link}}">{{ i.classify }}</a></div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
-</body>
+</section>
 </html>
+{% endblock list %}
+{% block content %}
+{% endblock content %}
 </body>
+
 </html>
