--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    {% block auth_css %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    {% endblock auth_css %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <title>포켓몬공홈</title>
+    <title>홈</title>
     <style>
         img {
             width: 45px;
@@ -29,9 +31,21 @@
     </style>
 </head>
 <body>
-    {% include 'navbar.html' %}
-
+{% include 'navbar.html' %}
+    <div class="container" id="content">
+    <!-- <div style="text-align : center;">
+        <img src="{% static 'assets/img/images.jpg' %}" alt="..." 
+            style="float: left; margin-left: 100px; margin-right: 50px; width:900px; height:758px;"/>
+    </div> -->
     {% block list %}
+
     {% endblock list %}
+
+    
+    </div>
+{% include 'footer.html' %}
 </body>
 </html>
+
+<!-- JS -->
+<script src="{% static '/js/main.js' %}"></script>
