--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="bg-light nav">
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-light">
@@ -11,29 +12,28 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'pbook:index' %}"><i class="bi bi-book"
-                                    style="color: brown; size: 50px;"></i>포켓몬도감</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'pbook:pocket_list' %}"><i
+                                    class="bi bi-book" style="color: brown; size: 50px;"></i>포켓몬도감</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="https://www.banggooso.com/gl/96/?locale=ko-KR"><i
                                     class="bi bi-card-list" style="color: black; size: 50px;"></i>나와 닮은 포켓몬은 찾기!</a>
                         </li>
-                    </ul>
-                </div>
-                <div class="collapse navbar-collapse justify-content-end">
-                    <!-- 왼쪽 점 없애기 -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                @copyright pocketman
-                            </a>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/"><i class="bi bi-file-earmark-bar-graph"
+                                    style="color: black; size: 50px;"></i>대시보드</a>
                         </li>
+                        
                     </ul>
                 </div>
+                <nav class="navbar bg-light">
+                    <div class="container-fluid">
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </nav>
             </div>
         </nav>
     </div>
