--- a/pbook/templates/pbook/pocket_list.html
+++ b/pbook/templates/pbook/pocket_list.html
@@ -36,7 +36,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{i.link}}">{{ i.classify }}</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{i.link}}" target='_blank' >{{ i.classify }}</a></div>
                     </div>
                 </div>
             </div>
